# hackathon

./: .gitignore  LICENSE.txt  README.md  __answer.csv  bad_model.ipynb  clear_data.xlsx  creating_time_series.ipynb  creating_time_series_example.ipynb  data.csv  fulldata.xls  helpful.py  main.ipynb  make_series.py  mcc_parser.ipynb  model.ipynb  model2.ipynb  normalize_data.ipynb  preparing.ipynb  pyproject.toml  requirements.txt  solution.ipynb  test_categories.json  test_data.ipynb  train_mcc_codes.json  Книга1.xlsx  Продажа на февраль.xlsx
_for_answers/: 5Карманов.ipynb  Bonafide.ipynb  PREMier.ipynb  model2.ipynb  ВПРОК.ipynb  ГЛОБУС.ipynb  ПЯторочка.ipynb  Столото.ipynb  Читай-город.ipynb  много лосося.ipynb  ситидрайв.ipynb
classification/: mcc_codes.json  mcc_codes.txt  mcc_parcer.py
data/: clear_data.xlsx  data.xlsx  normalized_data.xlsx
linear regression/: linear_regression.ipynb  linear_regression_is_weekend.ipynb  linear_regression_weekday.ipynb
non-linear regretion/: non-linear_regretion.py
normalized_graph/: .graph.ipynb
tasks/: Merch_CB_hack.csv
